# dbt-instacart-elt-demo

./: dbt_project.yml  pyproject.toml
.dbt/: profiles.yml
.github/workflows/: dbt-ci.yml
dbt_instacart_demo/: dbt_project.yml
dbt_instacart_demo/models/: sources.yml
dbt_instacart_demo/models/marts/: fct_customer_orders.sql
dbt_instacart_demo/models/staging/: stg_aisles.sql  stg_departments.sql
models/marts/: fct_customer_orders.sql  fct_department_sales.sql
models/staging/: stg_aisles.sql  stg_order_products.sql  stg_orders.sql  stg_products.sql
